# Linux-Timemachine

./: .gitignore  README.md  TESTSTODO  compileAndTest.sh  config.conf  createSystemdTimer.sh  dataLocation  differentialBackup.cpp  disableSystemdTimer.sh  install.sh  linuxtimemachine.cpp  meson.build  plan  requirements  run.sh  todo  utils.cpp
data/: LinuxTimeMachine.service  LinuxTimeMachine.timer  TimeMachine.service  TimeMachine.timer  mainWindow.ui  recover.ui  settings.ui  timeMachine.desktop
rec/: file.txt  prevfile.txt
rec/f1/: file.txt
rec/f2/: file.txt
rec/f3/: file.txt
rec/f4/: file.txt
rec/f5/: file.txt
rec/temp/: file.txt.rej
scripts/: createTestData.sh  createTestDataBackups.sh  disableSystemdTimer.sh  resetAndRun.sh  run.sh  runFakeFileSystemSimulation.sh
src/: backupHandler.h  differentialBackup.cpp  fullBackup.cpp  linuxtimemachine.cpp  utils.cpp
src/frontendApplication/: backupapplication.cpp  backupapplication.h  backupappwindow.cpp  backupappwindow.h  main.cpp  mainWindow.ui  oldmainWindow.ui  oldmainWindow.ui2  recover.ui  recoverappwindow.cpp  recoverappwindow.h  settingsappwindow.cpp  settingsappwindow.h
src/testing/: createRandomDifferences.cpp  randomFileSystemGenerator.cpp  utilsUnitTests.cpp
